--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Cooler Ones Project</title>
 </head>
+<footer>
+    <h1>Change</h1>
+</footer>
 
 <body>
 
