fixed modified index

--- a/index.html
+++ b/index.html
@@ -23,18 +23,6 @@
             </p>
         </nav>
 
-
-
-<<<<<<< HEAD
-        asdkfhasiugfhsdiufhglsidufhg ouerthg98e9r75ge9759e759e759475
-=======
-        asdkfhasiugfhsdiufhglsidufhgdfjdslafjldf
->>>>>>> 6639007840a255095d026f59131634ccb72ed2a4
-
-
-
-
-
         <hr>
 
         <div class="container">
@@ -51,7 +39,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <p class="has-background-info">qwer</p>
+                    <p class="has-background-info">qweraiufblkjnlaerfn</p>
                 </div>
             </div>
         </div>
