made header links work

--- a/meme.html
+++ b/meme.html
@@ -41,14 +41,12 @@
                 Please choose an application you would like to use.
             </p>
             <div class="columns is-3">
-                <div class="column" href="meme.html">
+                <div class="column">
                     <div class="has-background-primary">
                         auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj
                     </div>
                 </div>
-                <div class="column" href="movie.html">
-                    <p class="has-background-info">qwer</p>
-                </div>
+
             </div>
         </div>
 
