--- a/movie.html
+++ b/movie.html
@@ -41,12 +41,8 @@
                 Please choose an application you would like to use.
             </p>
             <div class="columns is-3">
-                <div class="column" href="meme.html">
-                    <div class="has-background-primary">
-                        auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj
-                    </div>
-                </div>
-                <div class="column" href="movie.html">
+
+                <div class="column">
                     <p class="has-background-info">qwer</p>
                 </div>
             </div>
