fixed random crap that was added and changed the titles of the pages

--- a/index.html
+++ b/index.html
@@ -23,14 +23,6 @@
             </p>
         </nav>
 
-
-
-
-
-
-
-
-
         <hr>
 
         <div class="container">
@@ -46,15 +38,13 @@
                         auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj
                     </div>
                 </div>
-                <<<<<<< HEAD <div class="column" href="movie.html">
+                <div class="column" href="movie.html">
                     <p class="has-background-info">qwer</p>
-                    =======
                     <div class="column">
                         <p class="has-background-info">qweraiufblkjnlaerfn</p>
-                        >>>>>>> 875859721237d230c88472a8fc62b06c38299c83
                     </div>
+                </div>
             </div>
-        </div>
 
 
 
