--- a/meme.html
+++ b/meme.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project 1</title>
+    <title>Meme Generator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
@@ -22,14 +22,6 @@
                 <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Reviewer</a>
             </p>
         </nav>
-
-
-
-
-
-
-
-
 
         <hr>
 
