fixed more weird stuff

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
             <div class="columns is-3">
                 <div class="column" href="meme.html">
                     <div class="has-background-primary">
-                        auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj
+                        <p>auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj</p>
                     </div>
                 </div>
                 <div class="column" href="movie.html">
-                    <p class="has-background-info">qwer</p>
-                    <div class="column">
-                        <p class="has-background-info">qweraiufblkjnlaerfn</p>
+                    <div class="has-background-info">
+                        <p>aislhdfoiajsdo;figj</p>
                     </div>
                 </div>
             </div>
