added some text to movie html

--- a/movie.html
+++ b/movie.html
@@ -27,11 +27,17 @@
 
         <div class="container">
             <h1 class="title has-text-centered">
-                Hello There
+                Movie Reviewer
             </h1>
             <p class="subtitle has-text-centered">
-                Please choose an application you would like to use.
+                Search for a movie to get information on it. Please simply use letters and numbers.
             </p>
+            <div class="columns is-3">
+                <div class="column">
+                    <textarea name="" id="" cols="30" rows="1"></textarea>
+                </div>
+            </div>
+
             <div class="columns is-3">
 
                 <div class="column">
