--- a/movie.html
+++ b/movie.html
@@ -41,6 +41,10 @@
         </div>
 
 
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="movie.js"></script>
 
     </section>
 </body>
