--- a/index.html
+++ b/index.html
@@ -32,18 +32,58 @@
             <p class="subtitle has-text-centered">
                 Please choose an application you would like to use.
             </p>
-            <div class="columns is-3">
-                <div class="column" href="meme.html">
+            <a class="columns is-3">
+
+                <!-- LEFT SIDE -->
+                <div class="column">
                     <div class="has-background-primary">
-                        <p>auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj</p>
+                        <div class="card has-background-primary">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
+                                        alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+
+                                    <div class="media-content">
+                                        <p class="title is-4">Meme Generator</p>
+                                        <p class="subtitle is-6">Description for the Meme Generator</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="column" href="movie.html">
+
+                <!-- RIGHT SIDE -->
+
+                <div class="column">
                     <div class="has-background-info">
-                        <p>aislhdfoiajsdo;figj</p>
+                        <div class="card has-background-info">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="movie.html"
+                                        alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-left">
+
+                                    </div>
+                                    <div class="media-content">
+                                        <p class="title is-4">Movie Reviewer</p>
+                                        <p class="subtitle is-6">Description of the Movie Reviewer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+
+        </div>
 
 
 
