styled movie page

--- a/movie.html
+++ b/movie.html
@@ -26,31 +26,57 @@
         <hr>
 
         <div class="container">
-            <h1 class="title has-text-centered">
-                Movie Reviewer
-            </h1>
-            <p class="subtitle has-text-centered">
-                Search for a movie to get information on it. Please simply use letters and numbers.
-            </p>
-            <div class="columns is-3">
-                <div class="column">
-                    <textarea name="" id="" cols="30" rows="1"></textarea>
+
+            <!-- SEARCH AREA -->
+            <div class="field">
+                <div class="control">
+                    <input class="input is-info" type="text" placeholder="Info input">
+                    <button class="button is-primary">Search</button>
                 </div>
             </div>
 
             <div class="columns is-3">
 
+                <!-- LEFT SIDE -->
                 <div class="column">
-                    <p class="has-background-info">qwer</p>
+                    <!-- MAYBE REDUCE THE SIZE OF THIE COLUMN -->
+                    <div class="has-background-primary">
+                        <div class="card has-background-primary">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
+                                        alt="Placeholder image">
+                                </figure>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- RIGHT SIDE -->
+
+                <div class="column">
+                    <article class="message is-large is-info">
+                        <div class="message-header">
+                            <p>Movie Name</p>
+                        </div>
+                        <div class="message-body">
+                            <p>Movie Info Item</p>
+                            <p>Movie Info Item</p>
+                            <p>Movie Info Item</p>
+                            <p>Movie Info Item</p>
+                            <p>Movie Info Item</p>
+                            <p>Movie Info Item</p>
+                        </div>
+                    </article>
                 </div>
             </div>
-        </div>
 
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-        <script src="movie.js"></script>
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+            <script src="movie.js"></script>
 
     </section>
 </body>
