made the layout of the meme generator

--- a/meme.html
+++ b/meme.html
@@ -26,19 +26,58 @@
         <hr>
 
         <div class="container">
-            <h1 class="title has-text-centered">
-                Hello There
-            </h1>
-            <p class="subtitle has-text-centered">
-                Please choose an application you would like to use.
-            </p>
             <div class="columns is-3">
+
+                <!-- LEFT SIDE -->
                 <div class="column">
+                    <!-- MAYBE REDUCE THE SIZE OF THIE COLUMN -->
                     <div class="has-background-primary">
-                        auhsdfpuahsdpfhapdsufjfdjflajldfjdfljdslfj
+                        <div class="card has-background-primary">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
+                                        alt="Placeholder image">
+                                </figure>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
 
+                <!-- RIGHT SIDE -->
+
+                <div class="column">
+                    <article class="message is-large is-primary">
+                        <div class="message-header">
+                            <p>Meme Generator</p>
+                        </div>
+                        <div class="message-body">
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-primary" type="text" placeholder="Top Text">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-primary" type="text" placeholder="Bottom Text">
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="message is-large is-primary">
+                        <div class="message-header">
+                            <p>Choose an image</p>
+                        </div>
+                        <div class="message-body">
+                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
 
