--- a/movie.html
+++ b/movie.html
@@ -38,14 +38,14 @@
             <div class="columns is-3">
 
                 <!-- LEFT SIDE -->
-                <div class="column">
+                <div class="column is-one-quarter">
                     <!-- MAYBE REDUCE THE SIZE OF THIE COLUMN -->
                     <div class="has-background-primary">
                         <div class="card has-background-primary">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
-                                        alt="Placeholder image">
+                                <figure class="image is-1by1.5">
+                                    <img id="movieCover" src="https://bulma.io/images/placeholders/1280x960.png"
+                                        href="meme.html" alt="Placeholder image">
                                 </figure>
                             </div>
 
@@ -58,15 +58,15 @@
                 <div class="column">
                     <article class="message is-large is-info">
                         <div class="message-header">
-                            <p>Movie Name</p>
+                            <p id="movieTitle">Movie Name</p>
                         </div>
                         <div class="message-body">
-                            <p>Movie Info Item</p>
-                            <p>Movie Info Item</p>
-                            <p>Movie Info Item</p>
-                            <p>Movie Info Item</p>
-                            <p>Movie Info Item</p>
-                            <p>Movie Info Item</p>
+
+                            <p id="movieYear">Movie Info Item</p>
+                            <p id="movieRated">Movie Info Item</p>
+                            <p id="movieGenre">Movie Info Item</p>
+                            <p id="movieActors">Movie Info Item</p>
+                            <p id="moviePlot">Movie Info Item</p>
                         </div>
                     </article>
                 </div>
