--- a/meme.html
+++ b/meme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -29,7 +29,7 @@
             <div class="columns is-3">
 
                 <!-- LEFT SIDE -->
-                <div class="column">
+                <div class="column is-half">
                     <!-- MAYBE REDUCE THE SIZE OF THIE COLUMN -->
                     <div class="has-background-primary">
                         <div class="card has-background-primary">
@@ -46,10 +46,10 @@
 
                 <!-- RIGHT SIDE -->
 
-                <div class="column">
+                <div class="column is-half">
                     <article class="message is-large is-primary">
                         <div class="message-header">
-                            <p>Meme Generator</p>
+                            <p>Add Text</p>
                         </div>
                         <div class="message-body">
                             <div class="field">
@@ -68,13 +68,24 @@
                         <div class="message-header">
                             <p>Choose an image</p>
                         </div>
+
+
                         <div class="message-body">
-                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
-                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
-                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
-                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
-                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
-                            <img src="https://bulma.io/images/placeholders/128x128.png" class="image is-128x128" alt="">
+                            <div class="table-container">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <td class="is-128x128">
+                                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                                            </td>
+
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+
                         </div>
                     </article>
                 </div>
