messing with dropdown

--- a/movie.html
+++ b/movie.html
@@ -30,8 +30,20 @@
             <!-- SEARCH AREA -->
             <div class="field">
                 <div class="control">
-                    <input class="input is-info" type="text" placeholder="Info input">
-                    <button class="button is-primary">Search</button>
+                    <form>
+                        <input class="input is-info" type="text" placeholder="Info input">
+                        <button class="movieSearch button is-primary">Search</button>
+                        <div class="field">
+                            <div class="control">
+                                <div class="select is-primary">
+                                    <select class="formInput">
+                                        <option>Search History</option>
+
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
