--- a/movie.html
+++ b/movie.html
@@ -31,18 +31,43 @@
             <div class="field">
                 <div class="control">
                     <form>
-                        <input class="input is-info" type="text" placeholder="Info input">
-                        <button class="movieSearch button is-primary">Search</button>
-                        <div class="field">
+                        <div class="">
+                            <input class="input is-info" type="text" placeholder="Info input">
+                            <button class="movieSearch button is-primary">Search</button>
+                        </div>
+
+
+                        <div class="field has-addons ">
                             <div class="control">
-                                <div class="select is-primary">
+                                <input class=" movieSearch input is-info" type="text" placeholder="Search Movie!">
+                            </div>
+                            <div class="control">
+                                <a class="button movieSearch is-info">
+                                    Search
+                                </a>
+                            </div>
+                        </div>
+
+
+                        <div class="field has-addons ">
+
+                            <div class="control">
+                                <div class="select is-info is-fullwidth">
                                     <select class="formInput">
                                         <option>Search History</option>
 
                                     </select>
                                 </div>
+
+
+                            </div>
+                            <div class="control">
+                                <button type="submit" class="button searchButton is-info">Choose</button>
                             </div>
                         </div>
+
+
+
                     </form>
                 </div>
             </div>
