got the search bar functioning again

--- a/movie.html
+++ b/movie.html
@@ -31,25 +31,22 @@
             <div class="field">
                 <div class="control">
                     <form>
-                        <div class="">
-                            <input class="input is-info" type="text" placeholder="Info input">
-                            <button class="movieSearch button is-primary">Search</button>
-                        </div>
 
 
-                        <div class="field has-addons ">
-                            <div class="control">
-                                <input class=" movieSearch input is-info" type="text" placeholder="Search Movie!">
+
+                        <div class="field has-addons">
+                            <div class="control ">
+                                <input class=" movieSearchInput input is-info" type="text" placeholder="Search Movie!">
                             </div>
                             <div class="control">
                                 <a class="button movieSearch is-info">
                                     Search
                                 </a>
                             </div>
-                        </div>
 
 
-                        <div class="field has-addons ">
+
+
 
                             <div class="control">
                                 <div class="select is-info is-fullwidth">
@@ -62,7 +59,8 @@
 
                             </div>
                             <div class="control">
-                                <button type="submit" class="button searchButton is-info">Choose<button>
+                                <button type="submit" class="button search Button is-info">Choose<button>
+
                             </div>
                         </div>
 
