layout for search buttons complete

--- a/movie.html
+++ b/movie.html
@@ -33,19 +33,18 @@
                     <form>
 
 
-
-                        <div class="field has-addons">
+                        <div class="field has-addons columns is-centered">
                             <div class="control ">
                                 <input class=" movieSearchInput input is-info" type="text" placeholder="Search Movie!">
                             </div>
                             <div class="control">
-                                <a class="button movieSearch is-info">
+                                <button class="button movieSearch is-info">
                                     Search
-                                </a>
+                                </button>
                             </div>
-
-
-
+                            <div class="column is-three-fifths" style="margin-right: 10px;">
+                            </div>
+                            <!-- style="margin-right: 120px;" -->
 
 
                             <div class="control">
@@ -59,7 +58,8 @@
 
                             </div>
                             <div class="control">
-                                <button type="submit" class="button search Button is-info">Choose<button>
+                                <button type="submit"
+                                    class="searchHistoryButton button search Button is-info">Choose</button>
 
                             </div>
                         </div>
