--- a/meme.html
+++ b/meme.html
@@ -35,7 +35,7 @@
                         <div class="card has-background-primary">
                             <div class="card-image">
                                 <figure class="image">
-                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
+                                    <img id="img-view" src="https://bulma.io/images/placeholders/1280x960.png"
                                         alt="Placeholder image">
                                 </figure>
                             </div>
@@ -68,12 +68,12 @@
                         <div class="message-body">
                             <div class="field">
                                 <div class="control">
-                                    <input class="input is-primary" type="text" placeholder="Top Text">
+                                    <input id="text0" class="input is-primary" type="text" placeholder="Top Text">
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input class="input is-primary" type="text" placeholder="Bottom Text">
+                                    <input id="1" class="input is-primary" type="text" placeholder="Bottom Text">
                                 </div>
                             </div>
                             <div class="control">
