movie half completed

--- a/movie.html
+++ b/movie.html
@@ -42,7 +42,7 @@
                                     Search
                                 </button>
                             </div>
-                            <div class="column is-three-fifths" style="margin-right: 10px;">
+                            <div class="column is-three-fifths" style="margin-right: 8px;">
                             </div>
                             <!-- style="margin-right: 120px;" -->
 
@@ -50,7 +50,11 @@
                             <div class="control">
                                 <div class="select is-info is-fullwidth">
                                     <select class="formInput">
-                                        <option>Search History</option>
+                                        <option id="option">Search History</option>
+                                        <option id="option1"></option>
+                                        <option id="option2"></option>
+                                        <option id="option3"></option>
+                                        <option id="option4"></option>
 
                                     </select>
                                 </div>
@@ -97,10 +101,14 @@
                         </div>
                         <div class="message-body">
 
-                            <p id="movieYear">Movie Info Item</p>
+                            <p id="movieYear">Release Year: </p>
+                            <br>
                             <p id="movieRated">Movie Info Item</p>
+                            <br>
                             <p id="movieGenre">Movie Info Item</p>
+                            <br>
                             <p id="movieActors">Movie Info Item</p>
+                            <br>
                             <p id="moviePlot">Movie Info Item</p>
                         </div>
                     </article>
