meme is working

--- a/meme.html
+++ b/meme.html
@@ -46,7 +46,7 @@
 
                 <!-- RIGHT SIDE -->
 
-                <div class="column ">
+                <div class="column">
                     <article class="message is-large is-primary">
                         <div class="message-header">
                             <p>Choose an image</p>
@@ -73,11 +73,11 @@
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input id="1" class="input is-primary" type="text" placeholder="Bottom Text">
+                                    <input id="text1" class="input is-primary" type="text" placeholder="Bottom Text">
                                 </div>
                             </div>
                             <div class="control">
-                                <button class="button is-primary">Submit</button>
+                                <button id="searchMeme" class="button is-primary">Submit</button>
                             </div>
                         </div>
                     </article>
