--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="link is-info is-size-3 is-family-code" href="index.html">Project 1</a>
             </p>
             <p class="level-item has-text-centered">
-                <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Reviewer</a>
+                <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Explorer</a>
             </p>
         </nav>
 
@@ -39,7 +39,7 @@
                     <div class="has-background-primary">
                         <div class="card has-background-primary">
                             <div class="card-image">
-                                <figure class="image is-4by3">
+                                <figure class="image is-4by2">
                                     <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
                                         alt="Placeholder image">
                                 </figure>
@@ -63,9 +63,8 @@
                     <div class="has-background-info">
                         <div class="card has-background-info">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="movie.html"
-                                        alt="Placeholder image">
+                                <figure class="image is-4by2">
+                                    <img src="images/moviescreenshot.png" href="movie.html" alt="Placeholder image">
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -74,7 +73,7 @@
 
                                     </div>
                                     <div class="media-content">
-                                        <p class="title is-4">Movie Reviewer</p>
+                                        <p class="title is-4">Movie Explorer</p>
                                         <p class="subtitle is-6">Description of the Movie Reviewer</p>
                                     </div>
                                 </div>
