--- a/meme.html
+++ b/meme.html
@@ -19,7 +19,7 @@
                 <a class="link is-info is-size-3 is-family-code" href="index.html">Project 1</a>
             </p>
             <p class="level-item has-text-centered">
-                <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Reviewer</a>
+                <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Explorer</a>
             </p>
         </nav>
 
