--- a/movie.html
+++ b/movie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Movie Reviewer</title>
+    <title>Movie Explorer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
@@ -19,7 +19,7 @@
                 <a class="link is-info is-size-3 is-family-code" href="index.html">Project 1</a>
             </p>
             <p class="level-item has-text-centered">
-                <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Reviewer</a>
+                <a class="link is-info is-size-5 is-family-code" href="movie.html">Movie Explorer</a>
             </p>
         </nav>
 
