--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                         <div class="card has-background-primary">
                             <div class="card-image">
                                 <figure class="image is-4by2">
-                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
-                                        alt="Placeholder image">
+                                    <img src="images/memescreenshot.png" href="meme.html" alt="Placeholder image">
                                 </figure>
                             </div>
                             <div class="card-content">
